test/FAIL/breakcmd/autres/01_test_break.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="address not a multiple of 4"
#-------

break add 0x1001